[package]
name = "rust-microbit"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
defmt-rtt = "0.4.0"
defmt = "0.3.6"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.0"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]

[[bin]]
name = "rust-microbit"
test = false
doc = false
